--- a/rtc.conf
+++ b/rtc.conf
@@ -4,8 +4,9 @@ logger.enable: NO
 logger.log_level: VERBOSE
 exec_cxt.periodic.rate: 10
 #manager.is_master: YES
-#manager.name: OOoManager
-#manager.naming_formats: OOoManager.mgr
-#logger.file_name: rtc%p.log,    STDOUT
 manager.shutdown_on_nortcs: NO
 manager.shutdown_auto: NO
+manager.name: OOoManager
+manager.naming_formats: OOoManager.mgr
+manager.shutdown_auto: NO
+#logger.file_name: rtc%p.log,    STDOUT
